Using width and height

--- a/index.html
+++ b/index.html
@@ -7,11 +7,15 @@
     <title>Vite App</title>
 </head>
 <body>
-<main>
-    <header class="bg-gray-500">Header</header>
-    <div class="bg-white">Body</div>
-    <footer class="bg-green-500">Footer</footer>
-</main>
+
+<div class="bg-gray-500 w-8">Text</div>
+<div class="flex">
+    <div class="bg-gray-500 w-3/12">Text</div>
+    <div class="bg-green-500 w-6/12">Text</div>
+    <div class="bg-red-400 w-screen">Text</div>
+
+</div>
+
 <script type="module" src="/main.js"></script>
 </body>
 </html>
