--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
 
-<div class="bg-gray-500 w-8">Text</div>
-<div class="flex">
-    <div class="bg-gray-500 w-3/12">Text</div>
-    <div class="bg-green-500 w-6/12">Text</div>
-    <div class="bg-red-400 w-screen">Text</div>
-
-</div>
+<div class="w-5 h-6 bg-red-100"></div>
+<div class="w-5 h-6 bg-red-200"></div>
+<div class="w-5 h-6 bg-red-300"></div>
+<div class="w-5 h-6 bg-red-400"></div>
+<div class="w-5 h-6 bg-red-500"></div>
+<div class="w-5 h-6 bg-red-600"></div>
+<div class="w-5 h-6 bg-red-700"></div>
+<div class="w-5 h-6 bg-red-800"></div>
+<div class="w-5 h-6 bg-red-900"></div>
 
 <script type="module" src="/main.js"></script>
 </body>
