--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
 
-<div class="w-5 h-6 bg-red-100"></div>
-<div class="w-5 h-6 bg-red-200"></div>
-<div class="w-5 h-6 bg-red-300"></div>
-<div class="w-5 h-6 bg-red-400"></div>
-<div class="w-5 h-6 bg-red-500"></div>
-<div class="w-5 h-6 bg-red-600"></div>
-<div class="w-5 h-6 bg-red-700"></div>
-<div class="w-5 h-6 bg-red-800"></div>
-<div class="w-5 h-6 bg-red-900"></div>
+<div class="bg-green-500 w-32 h-32 m-4 pt-3 px-1">Hello
+    HelloHello HelloHello Hello Hello Hello Hello Hello Hello Hello
+</div>
+<div class="bg-purple-500 w-32 h-32 mx-3">Hello</div>
 
 <script type="module" src="/main.js"></script>
 </body>
