Using font family

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="bg-green-500 w-32 h-32 m-4 pt-3 px-1">Hello
+<div class="bg-green-500 w-32 h-32 m-4 pt-3 px-1 font-mono">Hello
     HelloHello HelloHello Hello Hello Hello Hello Hello Hello Hello
 </div>
 <div class="bg-purple-500 w-32 h-32 mx-3">Hello</div>
