--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
 
-<div class="bg-green-500 w-32 h-32 m-4 pt-3 px-1 font-mono">Hello
-    HelloHello HelloHello Hello Hello Hello Hello Hello Hello Hello
-</div>
-<div class="bg-purple-500 w-32 h-32 mx-3">Hello</div>
-
+<p class="text-center bg-gray-500 text-white m-4 p-4 text-base">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nam nihil soluta. Dolorum impedit minima natus omnis perferendis quos rerum ut voluptate. Ab assumenda minima nobis officiis sunt veniam, vitae?
+</p>
 <script type="module" src="/main.js"></script>
 </body>
 </html>
