Styling text decorations, transform , line height and spacing

--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body>
+<body class="font-sans text-gray-900">
 
-<p class="text-center bg-gray-500 text-white m-4 p-4 text-base">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nam nihil soluta. Dolorum impedit minima natus omnis perferendis quos rerum ut voluptate. Ab assumenda minima nobis officiis sunt veniam, vitae?
+<p class="italic tracking-wide leading-relaxed lowercase">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nam nihil soluta. <span
+        class="not-italic font-black underline">Dolorum impedit minima natus omnis perferendis quos rerum ut voluptate.</span>
+    Ab assumenda minima nobis officiis sunt veniam, vitae?
 </p>
 <script type="module" src="/main.js"></script>
 </body>
