--- a/index.html
+++ b/index.html
@@ -6,13 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body class="font-sans text-gray-900">
+<body class="font-sans">
+<h1 class="text-gray-900 font-black text-xl capitalize">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
 
-<p class="italic tracking-wide leading-relaxed lowercase">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa nam nihil soluta. <span
-        class="not-italic font-black underline">Dolorum impedit minima natus omnis perferendis quos rerum ut voluptate.</span>
-    Ab assumenda minima nobis officiis sunt veniam, vitae?
+<p class="leading-snug tracking-tight mt-4">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur assumenda autem consequuntur dolore ea
+    eos incidunt ipsa ipsam ipsum necessitatibus nesciunt, porro quia quibusdam recusandae tenetur totam veniam
+    voluptate.
 </p>
+
+<p class="bg-gray-700 text-white p-5 m-5">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, aliquam architecto atque aut cum iure magni minus
+    mollitia natus nisi nobis non omnis perferendis porro quos sapiente ullam unde. Provident!
+<p class="text-right m-4">- Aung Myat Moe, <span class="italic">Instructor</span></p>
+</p>
+
+<button class="bg-blue-600 py-2 px-4 rounded text-white uppercase text-center ml-5">Entroll Now</button>
+
 <script type="module" src="/main.js"></script>
 </body>
 </html>
