--- a/index.html
+++ b/index.html
@@ -7,21 +7,8 @@
     <title>Vite App</title>
 </head>
 <body class="font-sans">
-<h1 class="text-gray-900 font-black text-xl capitalize">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
 
-<p class="leading-snug tracking-tight mt-4">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam aspernatur assumenda autem consequuntur dolore ea
-    eos incidunt ipsa ipsam ipsum necessitatibus nesciunt, porro quia quibusdam recusandae tenetur totam veniam
-    voluptate.
-</p>
-
-<p class="bg-gray-700 text-white p-5 m-5">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab, aliquam architecto atque aut cum iure magni minus
-    mollitia natus nisi nobis non omnis perferendis porro quos sapiente ullam unde. Provident!
-<p class="text-right m-4">- Aung Myat Moe, <span class="italic">Instructor</span></p>
-</p>
-
-<button class="bg-blue-600 py-2 px-4 rounded text-white uppercase text-center ml-5">Entroll Now</button>
+<div class="w-32 h-32 bg-gray-100 m-32 border-8 border-blue-800 rounded-br-full">&nbsp;</div>
 
 <script type="module" src="/main.js"></script>
 </body>
