--- a/index.html
+++ b/index.html
@@ -6,9 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body class="font-sans">
+<body class="font-sans p-5">
 
-<div class="w-32 h-32 bg-gray-100 m-32 border-8 border-blue-800 rounded-br-full">&nbsp;</div>
+<div>
+    <button class="bg-blue-500 text-white py-2 px-4 rounded border-l-8 border-blue-700">Submit</button>
+</div>
+
+<div>
+    <button class="text-red-500 border-4 px-4 py-2 mt-3 border-double">Cancel</button>
+</div>
+
+<div>
+    <button class="bg-indigo-200 px-4 py-2 mt-3 text-white border-b-4 border-indigo-300 text-indigo-900">Save</button>
+</div>
+
+<div>
+    <button class="mx-4 my-2 mt-3 p-6 rounded-full border-4 border-solid border-gray-500">Buy Now</button>
+</div>
+
+<div class="mt-3">
+    <button class="font-serif uppercase border-4 px-4 py-3 border-double rounded">Send Post Card</button>
+</div>
 
 <script type="module" src="/main.js"></script>
 </body>
