--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body class="font-sans p-5">
-<div>
-    Hello
-    <div class="bg-yellow-500 w-32 inline-block hidden">World</div>
+<body class="font-sans">
+<div class="h-screen flex flex-wrap">
+    <div class="w-16 h-16 bg-teal-600">1</div>
+    <div class="w-16 h-16 bg-yellow-600">2</div>
+    <div class="w-16 h-16 bg-green-600">3</div>
 </div>
 <script type="module" src="/main.js"></script>
 </body>
