--- a/index.html
+++ b/index.html
@@ -6,20 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body class="font-sans">
-<div class="h-screen flex flex-wrap">
-    <div class="flex h-1/3  w-1/3">
-        <div class="bg-teal-600 m-4 w-full m-2 flex justify-center items-center">1</div>
-    </div>
-    <div class="h-1/3 bg-yellow-600 w-1/3 flex justify-center items-center">2</div>
-    <div class="h-1/3 bg-purple-600 w-1/3 flex justify-center items-center">3</div>
-    <div class="h-1/3 bg-blue-600 w-1/3 flex justify-center items-center">4</div>
-    <div class="h-1/3 bg-red-600 w-1/3 flex justify-center items-center">5</div>
-    <div class="h-1/3 bg-gray-600 w-1/3 flex justify-center items-center">6</div>
-    <div class="h-1/3 bg-orange-600 w-1/3 flex justify-center items-center">7</div>
-    <div class="h-1/3 bg-indigo-600 w-1/3 flex justify-center items-center">8</div>
-    <div class="h-1/3 bg-green-600 w-1/3 flex justify-center items-center">9</div>
+<body>
+
+<div class="flex flex-col md:flex-row sm:flex-row">
+    <div class="w-32 h-32 bg-teal-600"></div>
+    <div class="w-32 h-32 bg-red-600"></div>
 </div>
+
+<div class="text-center md:text-right">
+    Text
+</div>
+
 <script type="module" src="/main.js"></script>
 </body>
 </html>
