Using hover modifier

--- a/index.html
+++ b/index.html
@@ -7,14 +7,8 @@
     <title>Vite App</title>
 </head>
 <body>
-
-<div class="flex flex-col md:flex-row sm:flex-row">
-    <div class="w-32 h-32 bg-teal-600"></div>
-    <div class="w-32 h-32 bg-red-600"></div>
-</div>
-
-<div class="text-center md:text-right">
-    Text
+<div class="h-screen flex justify-center items-center">
+    <button class="px-4 py-2 bg-indigo-500 text-white rounded hover:bg-indigo-600 hover:pointer">Click Me</button>
 </div>
 
 <script type="module" src="/main.js"></script>
