Using focus modifier

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body>
+<body class="bg-gray-200">
 <div class="h-screen flex justify-center items-center">
-    <button class="px-4 py-2 bg-indigo-500 text-white rounded hover:bg-indigo-600 hover:pointer">Click Me</button>
+    <input
+            class="bg-white px-4 py-2 border border-gray-300 rounded-lg  focus:border focus:border-indigo-600"
+            type="email" placeholder="example@gamil.com" />
 </div>
 
 <script type="module" src="/main.js"></script>
