--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-200">
 <div class="h-screen flex justify-center items-center">
     <input
-            class="bg-white px-4 py-2 border border-gray-300 rounded-lg  focus:border focus:border-indigo-600"
+            class="bg-white px-4 py-2 border border-gray-300 rounded-lg md:focus:bg-indigo-500"
             type="email" placeholder="example@gamil.com" />
 </div>
 
