Using shadow utility

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 <body class="bg-gray-200">
 <div class="h-screen flex justify-center items-center">
-    <input
-            class="bg-white px-4 py-2 border border-gray-300 rounded-lg md:focus:bg-indigo-500"
-            type="email" placeholder="example@gamil.com" />
+
+    <div class="w-32 h-32 bg-indigo-900 text-white flex justify-center items-center rounded-lg shadow-lg shadow-gray-500">
+        Hello World
+    </div>
+
 </div>
 
 <script type="module" src="/main.js"></script>
