--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-200">
 <div class="h-screen flex justify-center items-center">
 
-    <div class="w-32 h-32 bg-indigo-900 text-white flex justify-center items-center rounded-lg shadow-lg shadow-gray-500">
+    <div class="w-32 h-32 bg-indigo-500 text-white flex justify-center items-center rounded-lg shadow-lg shadow-gray-500 opacity-100">
         Hello World
     </div>
 
