--- a/index.html
+++ b/index.html
@@ -6,17 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Vite App</title>
 </head>
-<body class="bg-gray-200">
-<main class="h-screen flex flex-col justify-center items-center">
+<body class="bg-gray-500">
+<main class="h-screen flex justify-center items-center">
+    <div class="bg-gray-200 rounded-lg">
+        <div class="text-lg text-gray-800 p-4">
+            The title of the card
+        </div>
+        <div class="bg-white p-4 flex justify-between border">
+            <div class="bg-orange-700  uppercase text-white rounded-xl p-1 font-bold text-gray-100 text-xs">Under
+                Review
+            </div>
+            <div class="font-semibold">May 18, 2003</div>
+        </div>
+        <div class="bg-white p-4">
+            <div class="bg-gray-200 p-3 font-semibold
+             rounded-lg">
+                Here is a short comment about this employee.
 
-    <label for="fullName" class="text-center mb-1 text-lg font-bold text-gray-700">Full Name</label>
-    <input type="text" id="fullName"
-           class="px-3 py-3 rounded-lg shadow shadow-gray-400 text-sm w-4/6 placeholder-indigo-200 mb-3 focus:outline-indigo-700"
-           placeholder="Enter your full name" autocomplete="off">
-    <button class="px-4 py-2 bg-gray-800 text-white rounded-lg text-gray-100">Save</button>
-
-
+            </div>
+        </div>
+        <div class="p-4">
+            <h1 class="font-bold text-gray-600 uppercase text-xs">Employee</h1>
+            <div class="mt-3 flex">
+                <span class="bg-blue-700 flex justify-center items-center w-14 h-14 rounded-full text-white font-bold">VG</span>
+                <div class="ml-3">
+                    <h1 class="font-bold font-lg">Victor Golzalez</h1>
+                    <div class="text-gray-600">Instructor</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </main>
+
 
 <script type="module" src="/main.js"></script>
 </body>
