--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 it step by step. </p>
         </div>
 
-        <div class="relative flex justify-between">
+        <div class="relative flex justify-between mb-6">
             <a href="#" class="text-gray-200 bg-pink-500 px-4 py-2 rounded-full uppercase font-bold">Enroll Now</a>
             <div class="absolute right-0 bg-white border-4 border-pink-600 rounded-full flex justify-center items-center p-5">
                 <img class="w-16 h-16" src="/resources/tailwind-logo.png" alt="Tail Wind Logo">
@@ -38,8 +38,9 @@
     </div>
 </header>
 
-<main class="mt-16 flex flex-col">
-    <div class="max-w-4xl">
+<main class="w-full mt-16 flex flex-col items-center">
+
+    <div class="max-w-4xl w-full">
         <div class="p-4  w-full">
             <div>
                 <h1 class="font-bold text-xl text-indigo-700 border-b border-indigo-300 py-2">How It Works</h1>
@@ -52,7 +53,7 @@
                 </p>
             </div>
 
-            <div class="my-5">
+            <div class="mt-5">
                 <h1 class="font-bold text-xl text-indigo-700 border-b border-indigo-300 py-2">Advantages</h1>
                 <section class="flex flex-col sm:flex-row gap-2">
 
@@ -107,7 +108,50 @@
             </div>
         </div>
     </div>
+
+    <section class="bg-gray-800 w-full p-16">
+        <div class="flex flex-col justify-center items-center">
+            <h2 class="font-bold text-gray-300 text-lg">Sign up to download the free PDF
+                First name</h2>
+
+            <form action="" class="max-w-xl w-full flex-row sm:flex-row">
+                <div class="mt-1 flex flex-col md:flex-row">
+                    <label for="first_name" class="sr-only">First Name</label>
+                    <input type="text" id="first_name" placeholder="First Name"
+                           class="mt-3 w-full  bg-gray-600 px-4 py-2 rounded-lg  outline-none focus:outline-blue-500 border border-gray-500 md:mx-2"
+                           autocomplete="off"
+                    />
+
+                    <label for="last_name" class="sr-only">Last Name</label>
+                    <input type="text" id="last_name" placeholder="Last Name"
+                           class="mt-3 w-full bg-gray-600 px-4 py-2 rounded-lg  outline-none focus:outline-blue-500 border border-gray-500 md:mx-2"
+                           autocomplete="off"
+                    />
+                </div>
+                <div class="mt-1 flex flex-col md:flex-row">
+                    <label for="email" class="sr-only">Email</label>
+                    <input type="email" id="email" placeholder="example@gmail.com"
+                           class="mt-3 w-full  bg-gray-600 px-4 py-2 rounded-lg  outline-none focus:outline-blue-500 border border-gray-500 md:mx-2"
+                           autocomplete="off"
+                    />
+
+                    <label for="title" class="sr-only">Title</label>
+                    <input type="text" id="title" placeholder="Your Title"
+                           class="mt-3 w-full bg-gray-600 px-4 py-2 rounded-lg  outline-none focus:outline-blue-500 border border-gray-500 md:mx-2"
+                           autocomplete="off"
+                    />
+                </div>
+                <button type="submit" class="w-full bg-blue-500 mt-3 py-2 px-4 rounded-lg text-white" >Create Account</button>
+            </form>
+        </div>
+    </section>
 </main>
+
+<footer class="pb-8 bg-gray-800 w-full">
+    <p class="text-white text-xs text-center font-light">
+        Copyright © 2019 Scrimba
+    </p>
+</footer>
 
 <script type="module" src="/main.js"></script>
 </body>
